@@ -1,56 +1,59 @@
 package brendenx7.gmailcom.example.demo;
 
 import org.springframework.core.io.ByteArrayResource;
-import org.springframework.core.io.ClassPathResource;
 import org.springframework.http.HttpHeaders;
 import org.springframework.http.MediaType;
 import org.springframework.http.ResponseEntity;
 import org.springframework.web.bind.annotation.*;
 import org.springframework.web.multipart.MultipartFile;
 
-import java.io.InputStream;
+import java.io.File;
+import java.nio.file.Files;
 
 @RestController
-@RequestMapping("/prospects")
+@RequestMapping("/api/prospects")
 public class ProspectListController {
 
     /**
-     * Endpoint to filter data from bundled Excel files in resources.
+     * Compare new and old prospect Excel files and return updated version as download.
      *
-     * @return filtered Excel file as download (currently just echoes the target file)
+     * @param targetList  New incoming Excel file (filtered list)
+     * @param dataSource  Existing Excel file (master datasource)
+     * @return Excel file download containing updated list
      */
-    @PostMapping("/filter")
-    public ResponseEntity<ByteArrayResource> filter(@RequestParam("targetList") MultipartFile targetList,
-                                                    @RequestParam("dataSource") MultipartFile dataSource) {
+    @PostMapping("/compare-and-download")
+    public ResponseEntity<ByteArrayResource> compareAndDownload(
+            @RequestParam("targetList") MultipartFile targetList,
+            @RequestParam("dataSource") MultipartFile dataSource) {
+
         try {
+            // Write uploaded files to temporary disk files
+            File targetTemp = File.createTempFile("target_", ".xlsx");
+            targetList.transferTo(targetTemp);
 
-           // TODO: Write log statement to check if datasource/targetList is being read NULL or Not NULL
-            // Load the Excel files from the classpath (resources folder
-            ClassPathResource targetListResource = new ClassPathResource("filteredList.xlsx");
+            File datasourceTemp = File.createTempFile("datasource_", ".xlsx");
+            dataSource.transferTo(datasourceTemp);
 
+            // Run merge and get result
+            File updatedFile = ProspectService.compareAndUpdateProspects(targetTemp, datasourceTemp);
 
-            // Read bytes from filteredList.xlsx (you can also read datasource if needed)
-            byte[] excelBytes;
-            try (InputStream targetInputStream = targetListResource.getInputStream()) {
-                excelBytes = targetInputStream.readAllBytes();
-            }
-
-            // TODO: Add your filtering logic here with targetListResource and datasourceResource
-
+            // Read final result into memory
+            byte[] excelBytes = Files.readAllBytes(updatedFile.toPath());
             ByteArrayResource resource = new ByteArrayResource(excelBytes);
 
             HttpHeaders headers = new HttpHeaders();
-            headers.add(HttpHeaders.CONTENT_DISPOSITION, "attachment; filename=filtered_data.xlsx");
+            headers.add(HttpHeaders.CONTENT_DISPOSITION, "attachment; filename=updated_prospects.xlsx");
 
             return ResponseEntity.ok()
                     .headers(headers)
+                    .contentLength(excelBytes.length)
                     .contentType(MediaType.parseMediaType(
                             "application/vnd.openxmlformats-officedocument.spreadsheetml.sheet"))
                     .body(resource);
 
         } catch (Exception e) {
             e.printStackTrace();
-            String errorMsg = "Error processing files: " + e.getMessage();
+            String errorMsg = "Error: " + e.getMessage();
             return ResponseEntity.internalServerError()
                     .body(new ByteArrayResource(errorMsg.getBytes()));
         }
